fixed customer_repo, updated contoller for create customer

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
             <ul class="menu">
                 <li><a href="/">Home</a></li>
                         <li><a href="/customers">All customers</a></li>
+                        <li><a href="/customers/new">Sign Up</a></li>
             </ul>
         </nav>
     </header>
