Customer is finished, started activities controller

--- a/templates/customers/index.html
+++ b/templates/customers/index.html
@@ -8,6 +8,10 @@
 <section>
     <h3>{{ customer.name }}</h3>
     <p>{{ customer.membership }}</p>
+    <a href="/customers/{{customer.id}}/edit">Edit</a>
+    <form action="/customers/{{customer.id}}/delete" method="POST">
+        <input type="submit" value="delete">
+    </form>
 </section>
 
     
