Finished 90% of MVP, final commit

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <img src="photos/wow-pikachu.jpeg" />
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>My Gym</title>
 </head>
@@ -12,8 +13,10 @@
         <nav>
             <ul class="menu">
                 <li><a href="/">Home</a></li>
-                        <li><a href="/customers">All customers</a></li>
+                        <li><a href="/customers">All Customers</a></li>
                         <li><a href="/customers/new">Sign Up</a></li>
+                        <li><a href="/all-activities">All Activities</a></li>
+                        <li><a href="/activities/new">Create Activity</a></li>
             </ul>
         </nav>
     </header>
