--- a/templates/activities/index.html
+++ b/templates/activities/index.html
@@ -6,10 +6,15 @@
 {% for activity in activities %}
 
 <section>
-    <p>{{ activity.gym_id }}</p>
+    <p>{{ activity.gym.name }}</p>
     <p>{{ activity.activity_type }}</p>
     <p>{{ activity.duration }}</p>
     <p>{{ activity.difficulty }}</p>
+    <a href="/activities/{{activity.id}}/edit">Edit</a>
+    <form action="/activities/{{activity.id}}/delete" method="POST">
+        <input type="submit" value="delete">
+    </form>
+</section>
 </section>
 
 {% endfor %}
